[gd_scene load_steps=17 format=3 uid="uid://2hgwvwjwwob4"]

[ext_resource type="Script" path="res://Scripts/boss.gd" id="1_h5qhd"]
[ext_resource type="Texture2D" uid="uid://ws5o5dw5ujhb" path="res://Assets/bossburger.png" id="2_oyx61"]
[ext_resource type="PackedScene" uid="uid://c1jcpr01nhef5" path="res://Adds/MovementScenes/movimientoenem.tscn" id="3_b8co8"]
[ext_resource type="Script" path="res://Adds/Scenes/HitBoxEnem.gd" id="4_o6i50"]
[ext_resource type="AudioStream" uid="uid://bag2exfu3orde" path="res://Sounds/death effect.mp3" id="5_217cn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ndxs1"]
radius = 5.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eyj88"]
radius = 11.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1xfaf"]
radius = 9.0
height = 18.0

[sub_resource type="Animation" id="Animation_2a7gj"]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_7qyuq"]
resource_name = "Fall"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [14, 15, 16]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fallshake"
}]
}

[sub_resource type="Animation" id="Animation_xjbj3"]
resource_name = "Idle"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_lcnn1"]
resource_name = "Jump"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 25, 26, 26, 27]
}

[sub_resource type="Animation" id="Animation_bp65n"]
resource_name = "Move"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_nmrcs"]
resource_name = "OnAir"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [27, 27, 27, 27]
}

[sub_resource type="Animation" id="Animation_o7ftm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [21]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dvbwv"]
_data = {
"Death": SubResource("Animation_2a7gj"),
"Fall": SubResource("Animation_7qyuq"),
"Idle": SubResource("Animation_xjbj3"),
"Jump": SubResource("Animation_lcnn1"),
"Move": SubResource("Animation_bp65n"),
"OnAir": SubResource("Animation_nmrcs"),
"RESET": SubResource("Animation_o7ftm")
}

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_h5qhd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_ndxs1")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_oyx61")
hframes = 7
vframes = 5
frame = 21

[node name="MovimientoEnem" parent="." instance=ExtResource("3_b8co8")]

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color(0.321569, 0.756863, 0.447059, 1)
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_eyj88")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("4_o6i50")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_1xfaf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dvbwv")
}

[node name="Effect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_217cn")
bus = &"SFX"

[node name="JumpCooldown" type="Timer" parent="."]
wait_time = 12.0

[node name="OnAirTime" type="Timer" parent="."]
wait_time = 3.75

[node name="FallingTime" type="Timer" parent="."]
wait_time = 0.6

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="JumpCooldown" to="." method="_on_jump_cooldown_timeout"]
[connection signal="timeout" from="OnAirTime" to="." method="_on_on_air_time_timeout"]
[connection signal="timeout" from="FallingTime" to="." method="_on_falling_time_timeout"]
